[tool.poetry]
name = "microk8s-addons"
version = "0.1.0"
description = ""
authors = ["Chris <goabonga@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^24.10.0"
pytest = "^8.3.3"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
